<resources>
    <string name="app_name">BookNest</string>

    <string name="text1">Your Digital Reading Companion</string>
    <string name="text2">Welcome Back!</string>
    <string name="text3">Remember me</string>
    <string name="text4">Forgot Password?</string>
    <string name="text5">Sign In</string>
    <string name="text6">or continue with</string>
    <string name="text7">Google</string>
    <string name="text8">Apple</string>
    <string name="text9">Don\'t have an account?</string>
    <string name="text10">Sign up</string>
    <string name="text11">Email</string>
    <string name="text12">Password</string>
    <string name="text13">Already have an account?</string>
    <string name="text14">Sign in</string>
    <string name="text15">I agree to the</string>
    <string name="text16">Terms of Service</string>
    <string name="text17">and</string>
    <string name="text18">Privacy Policy</string>
    <string name="text19">Create Account</string>
    <string name="text20">Join our community of book lovers</string>
    <string name="text21">Full Name</string>
    <string name="text22">The Silent Echo </string>
    <string name="text23">Sarah Mitchell</string>
    <string name="text24">$19.99</string>
    <string name="text25">Add</string>
    <string name="text26">The Last Secret</string>
    <string name="text27">Micheal Ross</string>
    <string name="text28">4.5</string>
    <string name="text29">Search for books</string>
    <string name="text30">All Books</string>
    <string name="text31">Fiction</string>
    <string name="text32">Non-Fiction</string>
    <string name="text33">Featured Books</string>
    <string name="text34">New Releases</string>
    <string name="text35"></string>
    <string name="text36"></string>
    <string name="text37"></string>
    <string name="text38"></string>
    <string name="text39"></string>
    <string name="text40"></string>


    <string name="hint1">your@email.com</string>
    <string name="hint2">••••••••</string>
    <string name="hint3">Enter your name</string>
    <string name="hint4">Enter your email</string>
    <string name="hint5">Create password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>