<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text16"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/radioButton1"
                        app:layout_constraintStart_toEndOf="@+id/radioButton1"
                        app:layout_constraintTop_toTopOf="@+id/radioButton1" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text19"
                        android:textColor="@color/text_color1"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/hint4"
                        android:textColorHint="@color/light_grey"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/email"
                            android:drawablePadding="20dp"
                            android:drawableTint="@color/light_grey"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="text|textEmailAddress|textAutoComplete"
                            android:textColorHint="@color/light_grey" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/light_grey"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                        app:layout_constraintTop_toBottomOf="@+id/textView16">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/lock_solid"
                            android:drawableEnd="@drawable/eye_regular"
                            android:drawablePadding="20dp"
                            android:drawableTint="@color/light_grey"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="@string/hint5"
                            android:inputType="text|textPassword"
                            android:textColorHint="@color/light_grey" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text15"
                        android:textColor="@color/dark_grey"
                        android:textSize="12sp"
                        app:buttonTint="@color/primary"
                        app:checkedIconTint="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                        app:strokeColor="@color/primary" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/primary"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text19"
                        android:textSize="16sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
                        app:layout_constraintStart_toStartOf="@+id/radioButton1"
                        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text6"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintEnd_toEndOf="@+id/button5"
                        app:layout_constraintStart_toStartOf="@+id/button5"
                        app:layout_constraintTop_toBottomOf="@+id/button5" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text11"
                        android:textColor="@color/dark_grey"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/text12"
                        android:textColor="@color/dark_grey"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/poppins_regular"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/text7"
                        android:textColor="@color/text_color1"
                        android:textSize="16sp"
                        app:cornerRadius="10dp"
                        app:icon="@drawable/google"
                        app:iconGravity="textStart"
                        app:iconTintMode="multiply"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button1"
                        app:layout_constraintStart_toStartOf="@+id/button5"
                        app:layout_constraintTop_toBottomOf="@+id/textView1"
                        app:strokeColor="@color/light_grey"
                        app:strokeWidth="1dp" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/poppins_regular"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/text8"
                        android:textColor="@color/text_color1"
                        android:textSize="16sp"
                        app:cornerRadius="10dp"
                        app:icon="@drawable/apple"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp"
                        app:iconTintMode="multiply"
                        app:layout_constraintBottom_toBottomOf="@+id/button"
                        app:layout_constraintEnd_toEndOf="@+id/button5"
                        app:layout_constraintStart_toEndOf="@+id/button"
                        app:layout_constraintTop_toTopOf="@+id/button"
                        app:strokeColor="@color/light_grey"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text20"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintEnd_toEndOf="@+id/textView18"
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toBottomOf="@+id/textView18" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text21"
                        android:textColor="@color/dark_grey"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/textView17"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/light_grey"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                        app:layout_constraintTop_toBottomOf="@+id/textView10">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/user_regular"
                            android:drawablePadding="20dp"
                            android:drawableTint="@color/light_grey"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="@string/hint3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text17"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView15"
                        app:layout_constraintStart_toEndOf="@+id/textView15"
                        app:layout_constraintTop_toTopOf="@+id/textView15" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text18"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView13"
                        app:layout_constraintStart_toEndOf="@+id/textView13"
                        app:layout_constraintTop_toTopOf="@+id/textView13" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_color1"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/book_open_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/text13"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/text14"
            android:textAlignment="viewStart"
            android:textColor="@color/primary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>